// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`matches snapshots button 1`] = `
<button
  className="button default"
  data-testid="button"
  onClick={[Function]}
>
  Click me
</button>
`;

exports[`matches snapshots disabled 1`] = `
<button
  className="button default disabled "
  data-testid="button"
  onClick={[Function]}
>
  Button
</button>
`;

exports[`matches snapshots size 1`] = `
<div>
  <button
    className="small button default"
    data-testid="button"
    onClick={[Function]}
  >
    Button
  </button>
   
  <button
    className="medium button default"
    data-testid="button"
    onClick={[Function]}
  >
    Button
  </button>
   
  <button
    className="large button default"
    data-testid="button"
    onClick={[Function]}
  >
    Button
  </button>
</div>
`;

exports[`matches snapshots variant styles 1`] = `
<div>
  <button
    className="button primary"
    data-testid="button"
    onClick={[Function]}
  >
    Button
  </button>
   
  <button
    className="button secondary"
    data-testid="button"
    onClick={[Function]}
  >
    Button
  </button>
   
  <button
    className="button link"
    data-testid="button"
    onClick={[Function]}
  >
    Button
  </button>
   
  <button
    className="button danger"
    data-testid="button"
    onClick={[Function]}
  >
    Button
  </button>
</div>
`;
